--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,10 +45,10 @@ dependencies:
   firebase_core: ^2.8.0
   firebase_auth: ^4.3.0
   cloud_firestore: ^4.4.5
-  firebase_storage: ^11.0.16
+  firebase_storage: ^11.2.2
   shared_preferences: ^2.0.18
   csc_picker: ^0.2.7
-  image_picker: ^0.8.7+1
+  image_picker: ^0.8.7+5
   fluttertoast: ^8.2.1
   google_sign_in: ^6.1.0
   flutter_facebook_auth: ^5.0.10
@@ -56,6 +56,7 @@ dependencies:
   path_provider: ^2.0.15
   permission_handler: ^10.2.0
   open_file: ^3.3.1
+  url_launcher: ^6.1.11
 
 dev_dependencies:
   flutter_test:
